--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,12 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".presentation.activity.DetailActivity"></activity>
-        <activity android:name=".presentation.activity.HomeActivity" />
-        <activity android:name=".presentation.activity.SignUpActivity" />
-        <activity android:name=".RelativeActivity" />
-        <activity android:name=".LinearActivity" />
+        android:theme="@style/HKsMaterialAppLightTheme">
         <activity android:name=".presentation.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
