--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,12 @@ buildscript {
         version_material = "1.2.0"
         version_navigation = "2.3.0"
         daggerVersion = "2.12"
+        version_material = "1.3.0-alpha03"
+        version_cardview = "1.0.0"
+        version_retrofit = "2.9.0"
+        version_gson = "2.8.6"
+        version_glide = "4.11.0"
+        version_coroutine = "1.4.0"
     }
     repositories {
         google()
